@@ -22,15 +22,11 @@
  */
 package com.oracle.truffle.espresso.meta;
 
-import java.lang.reflect.Modifier;
-
-import static java.lang.reflect.Modifier.FINAL;
 import static java.lang.reflect.Modifier.PRIVATE;
 import static java.lang.reflect.Modifier.PROTECTED;
 import static java.lang.reflect.Modifier.PUBLIC;
-import static java.lang.reflect.Modifier.STATIC;
-import static java.lang.reflect.Modifier.TRANSIENT;
-import static java.lang.reflect.Modifier.VOLATILE;
+
+import java.lang.reflect.Modifier;
 
 /**
  * A Java element (i.e., a class, interface, field or method) that is described by a set of Java
@@ -146,19 +142,4 @@ public interface ModifiersProvider {
     default boolean isConcrete() {
         return !isAbstract();
     }
-
-    /**
-     * This is removed in JDK 9 and should not be used. It used to rely on use of reflection to read
-     * non-public values from {@link Modifier}. Such cross-module (i.e., {@code jdk.vm.ci} to
-     * {@code java.base}) reflection is disabled in 9 and will require a VM option such
-     * {@code --add-exports-private} to be enabled.
-     */
-    // @Deprecated
-    static int jvmFieldModifiers() {
-        // Reflection replaced with hard coded values (which will not change in JDK 8).
-        final int accEnum = 0x4000;
-        final int accSynthethic = 0x1000;
-        return PUBLIC | PRIVATE | PROTECTED | STATIC | FINAL | VOLATILE | TRANSIENT | accEnum | accSynthethic;
-    }
-
 }
